--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "lease-auto/laravel-localization",
+    "version": "1.0.0",
     "description": "Easy localization for Laravel",
     "keywords": [
         "localization",
